syntax = "proto3";
package passwordstoragepb;

option go_package = "pb/passwordstoragepb";

// A single password entry in the password storage
message PasswordEntry {
	string id = 1;
	string username = 2;
	string password = 3;
	string group = 4;
	string description = 5;
}

// The data structure used to store the password entries
message PasswordEntryList {
	repeated PasswordEntry password_entries = 1;
}
